# s3-data-explorer

./: README.md  docker-compose.yaml
backend/: .env  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/models/: stac_model.py
backend/app/services/: s3_service.py
frontend/: .env  Dockerfile  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(public)/data-explorer/: page.tsx
frontend/src/app/api/image/: route.ts
frontend/src/app/api/stac/: route.ts
frontend/src/components/data-card/: DataCard.tsx  types.ts
frontend/src/components/data-loader/: DataLoader.tsx  types.ts
frontend/src/components/explorer-header/: ExplorerHeader.tsx
s3-initialize/: initialize.sh
s3-initialize/testdata/: 20230905.json  20230905T110445.json  Hurricane.json
