[project]
name = "backend"
version = "1.0.0"
description = "Backend for S3 data explorer application"
authors = [
    {name = "Niklas Keerl"},
]
dependencies = ["fastapi[standard]==0.115.8", "aioboto3==13.4.0", "types-boto3[essential]==1.36.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "WTFPL"}


[tool.pdm]
distribution = false

[dependency-groups]
lint = [
    "black==25.1.0",
    "flake8==7.1.1",
]
